# shiori

./: .env.example  .gitignore  README.md  pipeline.py  pyproject.toml
shiori/: __init__.py  __main__.py  cli.py  config.py  notion.py  recording.py  util.py  whisper.py
src/: audio.py  cli.py  config.py  notion.py  recording.py  whisper.py
src/shiori/: audio.py  config.py  summarize.py
